# data_collector

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  README.md  REVIEW.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs-quality.yml  secrets_expo.yml  tests-integration.yml  tests-unit.yml
data_collector/: .env_example  __init__.py  secret_loader.py  tables.py
data_collector/captcha/: __init__.py  anti_captcha.py  metrics.py  models.py  provider.py
data_collector/config/: settings.py
data_collector/dramatiq/: __init__.py  actors.py  broker.py  cli_wrapper.py  rate_limit_backend.py  retry.py  service.py  task_dispatcher.py
data_collector/dramatiq/topic/: __init__.py  base.py
data_collector/dramatiq/workers/: __init__.py  dead_letters.py  logging_test.py
data_collector/enums/: __init__.py  captcha.py  commands.py  database.py  hashing.py  logging.py  notifications.py  pipeline.py  processing.py  runtime.py  scraping.py  storage.py
data_collector/examples/: __main__.py  registry.py
data_collector/examples/captcha/: __init__.py
data_collector/examples/dramatiq/: 01_simple_worker.py  02_multi_stage_pipeline.py  __init__.py
data_collector/examples/fun_watch/: 01_basic_decorator.py  02_database_rows.py  03_multithreaded.py
data_collector/examples/logging/: 01_splunk_hec.py  __init__.py
data_collector/examples/notifications/: 01_telegram.py  02_slack.py  03_email.py  04_discord.py  05_webhook.py  06_dispatcher.py
data_collector/examples/rabbitmq/: 01_publish_consume.py  02_broadcast.py  03_connection_health.py
data_collector/examples/request/: 01_basic_requests.py  02_session_management.py  03_error_handling.py  04_retry_and_saving.py  05_async_requests.py  06_metrics_and_threads.py  07_soap_client.py
data_collector/examples/scraping/: __init__.py  __main__.py
data_collector/examples/storage/: 01_local_storage.py  02_multi_backend.py  03_retention.py  04_remote_to_local.py  __init__.py
data_collector/examples/watchservice/: 01_stress_test.py  02_crash_recovery.py  _file_generator.py
data_collector/messaging/: __init__.py  __main__.py  connection.py  consumer.py  models.py  publisher.py  topology.py  watchservice.py
data_collector/notifications/: __init__.py  discord.py  dispatcher.py  email.py  models.py  notifier.py  rate_limiter.py  slack.py  telegram.py  webhook.py
data_collector/orchestration/: __init__.py  __main__.py  command_handler.py  manager.py  process_tracker.py  retention.py  scheduler.py  service.py
data_collector/processing/: __init__.py  models.py  ocr.py  pdf.py  preprocessing.py  training.py
data_collector/proxy/: __init__.py  blacklist.py  judges.py  models.py  provider.py  proxy_manager.py
data_collector/scaffold/: __init__.py  __main__.py  generator.py  templates.py
data_collector/scraping/: __init__.py  async_scraper.py  base.py  threaded.py
data_collector/settings/: __init__.py  captcha.py  dramatiq.py  main.py  manager.py  notification.py  processing.py  proxy.py  rabbitmq.py  storage.py  watchservice.py
data_collector/storage/: __init__.py  backend.py  janitor.py  manager.py  retention.py
data_collector/tables/: __init__.py  __main__.py  apps.py  captcha.py  command_log.py  deploy.py  examples.py  log.py  notifications.py  pipeline.py  proxy.py  runtime.py  shared.py  storage.py
data_collector/utilities/: app_registration.py  app_status.py  env.py  fun_watch.py  log.py  request.py  validate_docs.py  xml.py
data_collector/utilities/database/: __init__.py  columns.py  core.py  loaders.py  main.py  models.py
data_collector/utilities/functions/: converters.py  math.py  runtime.py
data_collector/utilities/log/: __init__.py  handlers.py  main.py  processors.py  router.py
docs/: 0. product-overview.md  1. index.md  1.1. architecture.md  1.2. data-model.md  1.3. enums.md  1.index.md  10. orchestration.md  11. scraping.md  12. captcha.md  13. soap-xml.md  14. pdf-ocr.md  15. proxy.md  16. concurrency.md  17. rabbitmq.md  17.1. dramatiq.md  17.2. watchdog.md  18. notifications.md  19. data-quality.md  2. secrets.md  2.1. secret_loader.md  2.1.secret_loader.md  2.secrets.md  20. storage.md  21. deep-learning-ner.md  24. rest-api.md  25. fun-watch.md  3. settings.md  3.settings.md  30. getting-started.md  31. first-app.md  32. app-patterns.md  4. utilities.md  4.1. database.md  4.2. hashing.md  4.3. functions.md  4.4. request.md  40. deployment-infra.md  41. monitoring.md  5. logging.md  50. roadmap.md  (+7 more)
tests/: README.md  conftest.py
tests/integration/: conftest.py
tests/integration/database/: test_database_connection.py  test_database_crud.py  test_database_merge.py  test_database_query.py  test_database_smoke.py
tests/integration/fun_watch/: conftest.py  test_fun_watch_integration.py
tests/quality/: test_validate_docs.py
tests/unit/captcha/: test_anti_captcha.py  test_metrics.py  test_models.py  test_provider.py  test_settings.py
tests/unit/database/: test_database_query_run_add.py  test_ensure_schema.py
tests/unit/enums/: test_captcha_enums.py  test_enums.py
tests/unit/examples/: __init__.py  test_examples_cli.py  test_registry.py
tests/unit/fun_watch/: test_context.py  test_decorator.py  test_tables.py  test_thread_safety.py
tests/unit/functions/: test_converters.py  test_math.py  test_runtime.py
tests/unit/log/: test_handlers.py  test_log_settings.py  test_logging_service.py  test_logs_table.py  test_processors.py  test_router.py
tests/unit/messaging/: conftest.py  test_connection.py  test_consumer.py  test_models.py  test_publisher.py  test_settings.py  test_topology.py  test_watchservice.py  test_watchservice_cli.py
tests/unit/notifications/: conftest.py  test_discord.py  test_dispatcher.py  test_email.py  test_models.py  test_rate_limiter.py  test_settings.py  test_slack.py  test_telegram.py  test_webhook.py
tests/unit/orchestration/: conftest.py  test_command_handler.py  test_manager.py  test_retention.py  (+4 more)
(+83 files in other folders)
