[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_collector"
version = "0.1.0"
description = "Framework for collecting data from webpages, API's, documents, free for non-commercial use"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
authors = [{ name = "Dragan Matesic" , email="32225602+DraganMatesic@users.noreply.github.com"}]
classifiers = [
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]



dependencies = [
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "line_profiler",
    "pika",
    "requests",
    "bs4",
    "lxml",
    "python-dateutil",
    "pandas",
    "html5lib",
    "cryptography"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
# Optional: include data files in your package
# "your_package_name" = ["data/*.txt", "config/*.json"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]