[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data_collector"
version = "0.1.0"
description = "Enterprise data collection framework under proprietary commercial license"
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE.txt" }
authors = [{ name = "Dragan Matesic" , email="32225602+DraganMatesic@users.noreply.github.com"}]
classifiers = [
    "License :: Other/Proprietary License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]



dependencies = [
    "psycopg2-binary",
    "sqlalchemy",
    "python-dotenv",
    "line_profiler",
    "pika",
    "requests",
    "bs4",
    "lxml",
    "python-dateutil",
    "pandas",
    "html5lib",
    "cryptography"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "mypy>=1.10.0"
]

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
# Optional: include data files in your package
# "your_package_name" = ["data/*.txt", "config/*.json"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests that require external infrastructure (database/services)"
]
